Fix bug with animation causing overflow

--- a/portfolio-site/src/sass/partials/pages/_index.scss
+++ b/portfolio-site/src/sass/partials/pages/_index.scss
@@ -8,7 +8,8 @@
     color: #fff;
     border-top: 2px solid v.$primaryBlueGrey;
     padding: Min(75px, Max(40px, math.div(75, 1920)*100vw)) 0;
-
+    overflow: hidden;
+    
     .projects-description {
         margin-bottom: math.div(48, 16)*1em;
         text-align: left;
